kubernetes/core/monitoring/grafana/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-redirect-https
  namespace: monitoring
spec:
  redirectScheme:
    permanent: true
    scheme: https
