kubernetes/core/monitoring/grafana/middleware-ws.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-ws
  namespace: monitoring
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
      X-Forwarded-Proto: https
