kubernetes/core/monitoring/grafana/ingressroute-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitor
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`grafana.chammanganti.dev`)
    middlewares:
    - name: grafana-redirect-https
    services:
    - name: grafana
      port: 80
