kubernetes/core/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.chammanganti.dev`)
    middlewares:
    - name: grafana-ws
    services:
    - name: grafana
      port: 80
  tls:
    secretName: grafana-tls
